@@ -69,4 +69,6 @@ Sandbox_EN = {
     Sandbox_MoreTraits_IngenuitiveLimit_tooltip = "Limit the amount of free recipes granted by Ingenuitive?<br>By default, all recipes are taught for players who have Ingenuitive.<br>Turning this on allows you to limit how much they learn instead.",
     Sandbox_MoreTraits_SlowWorkerScaler = "Slow Worker Scaling",
     Sandbox_MoreTraits_SlowWorkerScaler_tooltip = "How much longer it takes to perform TimedActions.<br>Higher values make TimedActions perform more slowly.<br>Setting this too high can make it excruciatingly slow to do any actions - especially reading books.",
+    Sandbox_MoreTraits_MartialWeapons = "Martial Artist Allow Weapon Shoves",
+    Sandbox_MoreTraits_MartialWeapons_tooltip = "By default, Martial Artist will only deal damage if the player is unarmed.<br>If enabled, players' shoves will still deal damage even if they are wielding a weapon.<br>If this option is disabled, you can still benefit from Martial Artist with an item in your Secondary slot (Flashlight, Bag, etc). It only checks if the Primary slot is equipped.",
 }
